Fixed issue on select when text is too long

--- a/app/assets/stylesheets/admin/_forms.css.scss
+++ b/app/assets/stylesheets/admin/_forms.css.scss
@@ -288,6 +288,9 @@ textarea.monospaced {
   }
 }
 
+.form-controls select {
+  max-width: 100%;
+}
 
 trix-editor {
   min-height: 250px;
